compilador.output
Terminals unused in grammar

    LABEL
    TYPE
    ARRAY
    OF
    PROCEDURE
    FUNCTION
    IF
    ELSE
    WHILE
    DO
    OR
    DIV
    NOT


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 bloco: parte_declara_vars $@2 comando_composto

    5 parte_declara_vars: var

    6 $@3: %empty

    7 var: $@3 VAR declara_vars
    8    | %empty

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@4: %empty

   12 $@5: %empty

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   14 tipo: IDENT

   15 lista_id_var: lista_id_var VIRGULA IDENT
   16             | IDENT

   17 lista_idents: lista_idents VIRGULA IDENT
   18             | IDENT

   19 comando_composto: T_BEGIN comandos T_END

   20 comandos: atribuicao
   21         | %empty

   22 $@6: %empty

   23 atribuicao: IDENT $@6 ATRIBUICAO lista_atribuicao PONTO_E_VIRGULA

   24 lista_atribuicao: lista_atribuicao operacao const_ou_var
   25                 | const_ou_var

   26 const_ou_var: IDENT
   27             | NUMERO

   28 operacao: ADICAO
   29         | SUBTRACAO
   30         | MULTIPLICACAO
   31         | DIVISAO


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2
    FECHA_PARENTESES (260) 2
    VIRGULA (261) 15 17
    PONTO_E_VIRGULA (262) 2 13 23
    DOIS_PONTOS (263) 13
    PONTO (264) 2
    T_BEGIN (265) 19
    T_END (266) 19
    VAR (267) 7
    IDENT (268) 2 14 15 16 17 18 23 26
    ATRIBUICAO (269) 23
    LABEL (270)
    TYPE (271)
    ARRAY (272)
    OF (273)
    PROCEDURE (274)
    FUNCTION (275)
    IF (276)
    ELSE (277)
    WHILE (278)
    DO (279)
    OR (280)
    DIV (281)
    NOT (282)
    NUMERO (283) 27
    ADICAO (284) 28
    SUBTRACAO (285) 29
    MULTIPLICACAO (286) 30
    DIVISAO (287) 31


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    programa (34)
        on left: 2
        on right: 0
    $@1 (35)
        on left: 1
        on right: 2
    bloco (36)
        on left: 4
        on right: 2
    $@2 (37)
        on left: 3
        on right: 4
    parte_declara_vars (38)
        on left: 5
        on right: 4
    var (39)
        on left: 7 8
        on right: 5
    $@3 (40)
        on left: 6
        on right: 7
    declara_vars (41)
        on left: 9 10
        on right: 7 9
    declara_var (42)
        on left: 13
        on right: 9 10
    $@4 (43)
        on left: 11
        on right: 13
    $@5 (44)
        on left: 12
        on right: 13
    tipo (45)
        on left: 14
        on right: 13
    lista_id_var (46)
        on left: 15 16
        on right: 13 15
    lista_idents (47)
        on left: 17 18
        on right: 2 17
    comando_composto (48)
        on left: 19
        on right: 4
    comandos (49)
        on left: 20 21
        on right: 19
    atribuicao (50)
        on left: 23
        on right: 20
    $@6 (51)
        on left: 22
        on right: 23
    lista_atribuicao (52)
        on left: 24 25
        on right: 23 24
    const_ou_var (53)
        on left: 26 27
        on right: 24 25
    operacao (54)
        on left: 28 29 30 31
        on right: 24


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   18 lista_idents: IDENT .

    $default  reduce using rule 18 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   17 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   17 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    T_BEGIN   reduce using rule 8 (var)
    $default  reduce using rule 6 ($@3)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    $@3                 go to state 16


State 12

   17 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 17 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 17


State 14

    4 bloco: parte_declara_vars . $@2 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 18


State 15

    5 parte_declara_vars: var .

    $default  reduce using rule 5 (parte_declara_vars)


State 16

    7 var: $@3 . VAR declara_vars

    VAR  shift, and go to state 19


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 18

    4 bloco: parte_declara_vars $@2 . comando_composto

    T_BEGIN  shift, and go to state 20

    comando_composto  go to state 21


State 19

    7 var: $@3 VAR . declara_vars

    $default  reduce using rule 11 ($@4)

    declara_vars  go to state 22
    declara_var   go to state 23
    $@4           go to state 24


State 20

   19 comando_composto: T_BEGIN . comandos T_END

    IDENT  shift, and go to state 25

    $default  reduce using rule 21 (comandos)

    comandos    go to state 26
    atribuicao  go to state 27


State 21

    4 bloco: parte_declara_vars $@2 comando_composto .

    $default  reduce using rule 4 (bloco)


State 22

    7 var: $@3 VAR declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 11 ($@4)
    $default  reduce using rule 7 (var)

    declara_var  go to state 28
    $@4          go to state 24


State 23

   10 declara_vars: declara_var .

    $default  reduce using rule 10 (declara_vars)


State 24

   13 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 29

    lista_id_var  go to state 30


State 25

   23 atribuicao: IDENT . $@6 ATRIBUICAO lista_atribuicao PONTO_E_VIRGULA

    $default  reduce using rule 22 ($@6)

    $@6  go to state 31


State 26

   19 comando_composto: T_BEGIN comandos . T_END

    T_END  shift, and go to state 32


State 27

   20 comandos: atribuicao .

    $default  reduce using rule 20 (comandos)


State 28

    9 declara_vars: declara_vars declara_var .

    $default  reduce using rule 9 (declara_vars)


State 29

   16 lista_id_var: IDENT .

    $default  reduce using rule 16 (lista_id_var)


State 30

   13 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   15 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 33
    DOIS_PONTOS  shift, and go to state 34


State 31

   23 atribuicao: IDENT $@6 . ATRIBUICAO lista_atribuicao PONTO_E_VIRGULA

    ATRIBUICAO  shift, and go to state 35


State 32

   19 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 19 (comando_composto)


State 33

   15 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 36


State 34

   13 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 37

    tipo  go to state 38


State 35

   23 atribuicao: IDENT $@6 ATRIBUICAO . lista_atribuicao PONTO_E_VIRGULA

    IDENT   shift, and go to state 39
    NUMERO  shift, and go to state 40

    lista_atribuicao  go to state 41
    const_ou_var      go to state 42


State 36

   15 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 15 (lista_id_var)


State 37

   14 tipo: IDENT .

    $default  reduce using rule 14 (tipo)


State 38

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo . $@5 PONTO_E_VIRGULA

    $default  reduce using rule 12 ($@5)

    $@5  go to state 43


State 39

   26 const_ou_var: IDENT .

    $default  reduce using rule 26 (const_ou_var)


State 40

   27 const_ou_var: NUMERO .

    $default  reduce using rule 27 (const_ou_var)


State 41

   23 atribuicao: IDENT $@6 ATRIBUICAO lista_atribuicao . PONTO_E_VIRGULA
   24 lista_atribuicao: lista_atribuicao . operacao const_ou_var

    PONTO_E_VIRGULA  shift, and go to state 44
    ADICAO           shift, and go to state 45
    SUBTRACAO        shift, and go to state 46
    MULTIPLICACAO    shift, and go to state 47
    DIVISAO          shift, and go to state 48

    operacao  go to state 49


State 42

   25 lista_atribuicao: const_ou_var .

    $default  reduce using rule 25 (lista_atribuicao)


State 43

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 50


State 44

   23 atribuicao: IDENT $@6 ATRIBUICAO lista_atribuicao PONTO_E_VIRGULA .

    $default  reduce using rule 23 (atribuicao)


State 45

   28 operacao: ADICAO .

    $default  reduce using rule 28 (operacao)


State 46

   29 operacao: SUBTRACAO .

    $default  reduce using rule 29 (operacao)


State 47

   30 operacao: MULTIPLICACAO .

    $default  reduce using rule 30 (operacao)


State 48

   31 operacao: DIVISAO .

    $default  reduce using rule 31 (operacao)


State 49

   24 lista_atribuicao: lista_atribuicao operacao . const_ou_var

    IDENT   shift, and go to state 39
    NUMERO  shift, and go to state 40

    const_ou_var  go to state 51


State 50

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA .

    $default  reduce using rule 13 (declara_var)


State 51

   24 lista_atribuicao: lista_atribuicao operacao const_ou_var .

    $default  reduce using rule 24 (lista_atribuicao)
